fix: cors errors

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts",
+    "db:seed": "tsx prisma/seed-simple-auth.ts",
+    "db:seed:better-auth": "tsx prisma/seed.ts",
     "db:seed:prod": "node scripts/seed.js",
+    "db:migrate-passwords": "tsx scripts/migrate-passwords.ts",
     "db:init": "bash scripts/init-db.sh",
     "typecheck": "bunx --bun tsc --noEmit --pretty",
     "check:ci": "biome check --changed --vcs-default-branch=origin/$GITHUB_BASE_REF --no-errors-on-unmatched src/",
@@ -23,22 +25,32 @@
     "format": "biome check --staged --write src/",
     "validate": "bun run check:ci && bun run typecheck"
   },
-  "keywords": ["ugc", "agency", "hono", "api"],
+  "keywords": [
+    "ugc",
+    "agency",
+    "hono",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hono/node-server": "^1.14.4",
     "@prisma/client": "^6.9.0",
-    "better-auth": "^1.2.9",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "hono": "^4.7.11",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.0",
     "prisma": "^6.9.0",
     "zod": "^3.25.57"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^24.0.0",
     "nodemon": "^3.1.10",
     "tsx": "^4.19.4",
