fix: cors errors

--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed-simple-auth.ts",
-    "db:seed:better-auth": "tsx prisma/seed.ts",
-    "db:seed:prod": "node scripts/seed.js",
+    "db:seed": "node scripts/seed.js",
     "db:migrate-passwords": "tsx scripts/migrate-passwords.ts",
     "db:init": "bash scripts/init-db.sh",
     "typecheck": "bunx --bun tsc --noEmit --pretty",
